[PSPIEL-252] added fav doctor listing endpoint
